refactor: updated package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ascii-converter",
+  "name": "ascii-map",
   "version": "1.0.0",
   "description": "A lightweight representation of the ascii table that makes it easy to convert to and fro character, decimal, hexadecimal, octal, HTML code, HTML name.",
   "repository": "ebukaodini/ascii-converter",
